--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,8 @@
      <td><input type="text" placeholder="PS_HOME" ng-model="contact.PS_HOME"/></td>
        <td><input type="text" placeholder="PS_APP_HOME" ng-model="contact.PS_APP_HOME"/></td>
        <td><input type="text" placeholder="Domain" ng-model="contact.Domain"/></td>
-     <td><input type="text" placeholder="DB_TYPE" ng-model="contact.DB_Type"/></td></tr>
-      <td><input type="text" placeholder="Oracle_sid" ng-model="contact.DB_sid"/></td></tr>
+     <td><input type="text" placeholder="DB_TYPE" ng-model="contact.DB_Type"/></td><tr>
+      <td><input type="text" placeholder="Oracle_sid" ng-model="contact.DB_sid"/></td>
     <tr> <td><input type="text" placeholder="DB_username" ng-model="contact.DB_Uname"/></td>
      <td><input type="password" placeholder="DB_password" ng-model="contact.DB_Password"/></td>
      <td><input type="text" placeholder="Script_location" ng-model="contact.DB_Sloc"/></td></tr><tr>
