--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
        <td><input type="text" placeholder="Domain" ng-model="contact.Domain"/></td>
      <td><input type="text" placeholder="DB_TYPE" ng-model="contact.DB_Type"/></td><tr>
       <td><input type="text" placeholder="Oracle_sid" ng-model="contact.DB_sid"/></td>
-    <tr> <td><input type="text" placeholder="DB_username" ng-model="contact.DB_Uname"/></td>
+    <td><input type="text" placeholder="DB_username" ng-model="contact.DB_Uname"/></td>
      <td><input type="password" placeholder="DB_password" ng-model="contact.DB_Password"/></td>
      <td><input type="text" placeholder="Script_location" ng-model="contact.DB_Sloc"/></td></tr><tr>
      <td><input type="text" placeholder="Log_location" ng-model="contact.DB_Lloc"/></td>
