--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
                 <th>log location</th></tr>-->
         </thead>
         <tr>
-     <td><input type="text" placeholder="Server_Name or IP" ng-model="contact.servername"/></td>
+     <td><input type="text" placeholder="Server_Name or IP" ng-model="contact.LINUXXSERVERIP"/></td>
      <td><input type="text" placeholder="PS_HOME" ng-model="contact.PS_HOME"/></td>
        <td><input type="text" placeholder="PS_APP_HOME" ng-model="contact.PS_APP_HOME"/></td>
        <td><input type="text" placeholder="Domain" ng-model="contact.Domain"/></td>
