--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
      <td><input type="text" placeholder="WEBLOGICHOMEPATH" ng-model="contact.WEBLOGICHOMEPATH"/></td>
      <td><input type="text" placeholder="WLPORTNO" ng-model="contact.WLPORTNO"/></td>
      <td><input type="text" placeholder="WLCUSERNAME" ng-model="contact.WLCUSERNAME"/></td></tr><tr>
+         <td><input type="text" placeholder="WLCPASSWORD" ng-model="contact.WLCPASSWORD"/></td></tr><tr>
      <td><input type="text" placeholder="IBDOMAIN" ng-model="contact.IBDOMAIN"/></td>
      <td><input type="text" placeholder="HOSTNAME" ng-model="contact.HOSTNAME"/></td>
      <td><input type="text" placeholder="MASTERSCHDL" ng-model="contact.MASTERSCHDL"/></td>
