--- a/public/schedule.html
+++ b/public/schedule.html
@@ -9,7 +9,7 @@
     <div class="container">
     <h1>This is a test app</h1>
     
-    <table class="table" ng-controller="mycntrl">
+    <table class="table" ng-controller="mycntrl2">
         <thead>
             <!--<tr>
                 <th>Server Name</th>
@@ -29,7 +29,7 @@
      <td><input type="text" placeholder="AppMessageNew" ng-model="contact.AppMessageNew"/></td><tr>
       <td><input type="text" placeholder="Gateway_WLC" ng-model="contact.Gateway_WLC"/></td>
     <td><input type="text" placeholder="IBstatus" ng-model="contact.IBstatus"/></td>
-     <td><input type="password" placeholder="MemoryCheck" ng-model="contact.MemoryCheck"/></td>
+     <td><input type="text" placeholder="MemoryCheck" ng-model="contact.MemoryCheck"/></td>
      <td><input type="text" placeholder="ProcessScheduler_Status_Linux" ng-model="contact.ProcessScheduler_Status_Linux"/></td></tr><tr>
      <td><input type="text" placeholder="ServerAvail" ng-model="contact.ServerAvail"/></td>
      <td><input type="text" placeholder="SpaceCheck" ng-model="contact.SpaceCheck"/></td>
